// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing of FileHeaderInfo function render websockets file header info with pathname correctly (Python) 1`] = `
"# //////////////////////////////////////////////////////////////////////
#
# Gemini Market Data Websocket API - 1.0.0
# Protocol: wss
# Host: api.gemini.com
# Path: /v1/marketdata
#
# //////////////////////////////////////////////////////////////////////"
`;

exports[`Testing of FileHeaderInfo function render websockets file header info with pathname correctly 1`] = `
"////////////////////////////////////////////////////////////////////////
//
// Gemini Market Data Websocket API - 1.0.0
// Protocol: wss
// Host: api.gemini.com
// Path: /v1/marketdata
//
////////////////////////////////////////////////////////////////////////"
`;

exports[`Testing of FileHeaderInfo function render websockets file header info without pathname correctly (Python) 1`] = `
"# //////////////////////////////////////////////////////////////////////
#
# Gemini Market Data Websocket API - 1.0.0
# Protocol: wss
# Host: api.gemini.com
#
# //////////////////////////////////////////////////////////////////////"
`;

exports[`Testing of FileHeaderInfo function render websockets file header info without pathname correctly 1`] = `
"////////////////////////////////////////////////////////////////////////
//
// Gemini Market Data Websocket API - 1.0.0
// Protocol: wss
// Host: api.gemini.com
//
////////////////////////////////////////////////////////////////////////"
`;
